Bug 693551 - Regression: "Error handled by opdfread.ps : rangecheck" starting with 5784bfbfba7191cacce5309e88afac0851287460
Summary: Regression: "Error handled by opdfread.ps : rangecheck" starting with 5784bfb...
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Writer (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-11 15:24 UTC by Marcos H. Woehrmann
Modified: 2013-01-23 10:08 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2013-01-11 15:24:14 UTC
Starting with 5784bfbfba7191cacce5309e88afac0851287460 the following commands result in a "%%[ Error handled by opdfread.ps : rangecheck; OffendingCommand: >> ]%%" error:

  bin/gs -sDEVICE=ps2write -o test.ps  ./Bug691740.pdf
  bin/gs -sDEVICE=ppmraw   -o test.ppm ./test.ps
Comment 1 Alex Cherepanov 2013-01-17 15:14:10 UTC
The generated PS file includes this fragment:
<< /PageLabels >>
Comment 2 Ken Sharp 2013-01-17 15:23:05 UTC
(In reply to comment #1)
> The generated PS file includes this fragment:
> << /PageLabels >>

Thanks for the investigation Alex, I'll remove that when I have a moment.
Comment 3 Ken Sharp 2013-01-23 10:08:09 UTC
Should be fixed in commit bb8f4582d893aab544597599b9498e38dfa12de4