ps2write - Don't add PageLabels to the Catalog when we get a relevant pdfmark

Bug 693551 " Regression: "Error handled by opdfread.ps : rangecheck" starting with 5784bfbfba7191cacce5309e88afac0851287460"

opdfread.ps doesn't know what to do with a PageLabel, so don't emit them

Not sure why this didn't show up in the original cluster test